# render_engine_lunr

./: .gitignore  README.md  pyproject.toml
.github/workflows/: static.yml
docs/: app.py
docs/pages/: lunr_plugin.md
docs/templates/: archive.html  base.html  page.html  pico.html
render_engine_lunr/: __init__.py  plugins.py  template.html  theme.py
render_engine_lunr/templates/components/lunrjs/: lunr_search.html  lunrjs_head.html
