[build-system]
requires = ["setuptools", "setuptools_scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "render_engine_lunr"
dynamic = ["version"]
description = "Plugin and theme for Lunr.js"
readme = "README.md"

dependencies = [
    "jinja2",
    "render-engine>=2024.1.1b1",
    "lunr"
    ]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-playwright",
    "ruff",
    ]

[tool.setuptools_scm]
local_scheme = "no-local-version"

[project.urls]
homepage = "https://github.com/kjaymiller/render_engine_lunr"
repository = "https://github.com/kjaymiller/render_engine_lunr"
documentation = "https://github.io/kjaymiller/render_engine_lunr"

[tool.semantic_release]
version_toml = "pyproject.toml:project.version"
branch = "main"

[tool.ruff]
select = ["E", "F", "I", "UP"]
target-version = "py311"
line-length = 120
ignore-init-module-imports = true